Added setting detail to the intro.

--- a/skull-rock.html
+++ b/skull-rock.html
@@ -23,107 +23,179 @@
     <body>
         <h1>Skull Rock</h1>
         <div id="0">
-            <p>There be wooden sailing ships and pirates. Arrr!</p>
+            <p>It is early Monday morning, the first of May, 1617, about 5 o’clock, the sun will be up in a half hour. You expect it will be overcast today, and a bit chilly, about 2C. But who can tell in this morning fog? The ice has been heavy this year, which makes the air cold when the wind is off the water.</p>
+            <p>You walk your way down to St. John’s Harbour. Past the rooms, past the flakes where the cod will be dried, and past the stages where it will be landed and split. It was hard work getting all this repaired after it being at the mercy of the elements all winter, not to mention the bits that had been damaged or stolen by rival fleets, it took a little over a month this year. Life is easier back home in Bristol, England, but this is where the honest work is.</p>
+            <p>If you wanted dishonest work you could easily take up with a pirate crew, there are plenty around. 13 years ago the newly minted King James ended the almost 20-year-old Anglo-Spanish war. A good thing, but it put a very large navy suddenly out of business. A man’s gotta eat, and if your expertise is fighting the Spanish at sea, well… turning pirate makes a certain sense. Thankfully, the pirates tend to congregate far from here on the northern shores of Africa, but you occasionally hear of pirates nearby. Just a few years ago there were pirates just up the coast in Harbour Grace. They sometimes come to Newfoundland to recruit and victual their ships.</p>
+            <p>You nod to the other men, doing the same as you as you prepare for your daily commute. Now everyone will row out through the St. John’s Narrows rush hour traffic to the inshore fishing grounds. Thankfully you do not have very far to go, around here the cod is so plentiful that it has been said, “the cod shoals are so thick you can hardly row a boat through them.” A hundred years ago Cabot reportedly said you could catch ‘em with a basket! These days you use a jigger, hooking them one-by-one and pulling them up over the side until the boat is full. Then you row back in to clean and salt. Then it is almost straight to bed to do the same thing tomorrow.</p>
+            <p>Usually the fog burns off once the sun is up, but no such fortune today. You’re used to fog, but it can still be kind of creepy. It is a new world afterall. Men such as Whitbourne have claimed to have seen creatures akin to mermaids. And there is always witches. 10 witches were hanged in Pendle Hill back home just 5 years ago. And the King himself was nearly killed at sea by a witch-made storm just after his wedding almost 30 years ago.</p>
+            <p>The gloom of the fog is an extra burden today too. Yesterday, at church, there was a heartbreaking burial for two young stowaways. Twins, Alice and Isaac, just 6-years-old. They came across in February on the same ship you did. How they stayed hidden and fed on such a small ship boggles the mind, but they were not discovered until 2 weeks in. By that time the captain was not willing to turn back because delay would have meant added expense, and a late arrival which would have meant not getting the best landing spots. In spite of their young age they were thriving and even helping until 3 weeks ago when they went missing. Finally, you were forced to conclude that they met some ill fate and were declared dead, and a memorial was held, yesterday.</p>
+            <p>Your boat is full. You haul anchor and set to rowing back to the harbour, there are still many hours of work yet. As you approach the mouth of The Narrows, the fog gets thicker, until you can longer see land. No bother, you’ll row through it. Sure enough, a few moments later you row through and you can see land again. But there is something else! Standing on a rock, perhaps some 50 meters away, the glowing apparition of a beautiful curly red haired pale skinned woman dressed in green and white gossamer. You look around, surely someone else sees her too, but there is no one. Motionless, she watches you intently.</p>
             <ul>
-                <li><a href="#1">Next</a>.</li>
-            </ul>
-        </div>
-        <div id="1">
-            <img src="sr-01.jpg"></img>
-            <p>There is a monster pirate.</p>
-            <ul>
-                <li><a href="#8">Refuse the call</a>.</li>
-                <li><a href="#9">Adventure</a>.</li>
+                <li>
+                    <a href="#8">Ignore her</a>
+                    .
+                </li>
+                <li>
+                    <a href="#9">Row over</a>
+                    .
+                </li>
             </ul>
         </div>
         <div id="2">
             <p>You encounter the pirate.</p>
             <ul>
-                <li><a href="#12">Fight</a>.</li>
-                <li><a href="#3">Lay low</a>.</li>
+                <li>
+                    <a href="#12">Fight</a>
+                    .
+                </li>
+                <li>
+                    <a href="#3">Lay low</a>
+                    .
+                </li>
             </ul>
         </div>
         <div id="3">
             <img src="sr-03.jpg"></img>
             <p>You are rescued by Alice and Isaac.</p>
             <ul>
-                <li><a href="#28">Steal the diamond tooth</a>.</li>
-                <li><a href="#4">Hide and observe</a>.</li>
+                <li>
+                    <a href="#28">Steal the diamond tooth</a>
+                    .
+                </li>
+                <li>
+                    <a href="#4">Hide and observe</a>
+                    .
+                </li>
             </ul>
         </div>
         <div id="4">
             <img src="sr-04.jpg"></img>
             <p>Kill the demon octopus with a giant anchor.</p>
             <ul>
-                <li><a href="#5">Steal the diamond tooth</a>.</li>
-                <li><a href="#26">Find the pirate</a>.</li>
+                <li>
+                    <a href="#5">Steal the diamond tooth</a>
+                    .
+                </li>
+                <li>
+                    <a href="#26">Find the pirate</a>
+                    .
+                </li>
             </ul>
         </div>
         <div id="5">
             <img src="sr-05.jpg"></img>
             <p>Learn the pirate's tragic tale.</p>
             <ul>
-                <li><a href="#6">Summon the sea witch</a>.</li>
-                <li><a href="#26">Find the pirate</a>.</li>
-                <li><a href="#29">Destroy the tooth</a>.</li>
+                <li>
+                    <a href="#6">Summon the sea witch</a>
+                    .
+                </li>
+                <li>
+                    <a href="#26">Find the pirate</a>
+                    .
+                </li>
+                <li>
+                    <a href="#29">Destroy the tooth</a>
+                    .
+                </li>
             </ul>
         </div>
         <div id="6">
             <p>Encounter the sea witch.</p>
             <ul>
-                <li><a href="#27">Sacrifice yourself</a>.</li>
-                <li><a href="#7">Negotiate with the sea witch</a>.</li>
+                <li>
+                    <a href="#27">Sacrifice yourself</a>
+                    .
+                </li>
+                <li>
+                    <a href="#7">Negotiate with the sea witch</a>
+                    .
+                </li>
             </ul>
         </div>
         <div id="7">
             <p>Sheila Nageira returns.</p>
             <ul>
-                <li><a href="#10">Sacrifice yourself</a>.</li>
-                <li><a href="#29">Destroy the tooth</a>.</li>
+                <li>
+                    <a href="#10">Sacrifice yourself</a>
+                    .
+                </li>
+                <li>
+                    <a href="#29">Destroy the tooth</a>
+                    .
+                </li>
             </ul>
         </div>
         <div id="8">
-            <p>There is still a monster pirate.</p>
+            <p>You put the beautiful, but frightening, apparition out of your mind, and pumping your oars all the harder you hasten back to your stage. You spend the next several hours unloading, splitting, and salting your fish.</p>
+            <p>That night you do not sleep well. You have many nightmares about a monstrous pirate. Not simply a mean pirate, but some sort of literal monster pirate captain seemingly from Hell. He seemed to be recruiting crew, corrupting them with enticements to commit unspeakable deadly sins, and rejoicing in their eventual deaths. His head was that of a bleached skull with perpetual flames burning in his eye sockets. You also dream of young Alice and Isaac. You see them cowering in a cold damp dark place. Through it all, you hear a woman pleading, “Help them.”</p>
+            <p>In the morning, by the time you trudge down to your boat, the sun is already up although the weather is the same as yesterday so it is hard to tell, and all the fishermen are already out through The Narrows.</p>
             <ul>
-                <li><a href="#9">Next</a>.</li>
+                <li>
+                    <a href="#11">Next</a>
+                    .
+                </li>
             </ul>
         </div>
         <div id="9">
-            <p>Pirate spirit Sheila Nageira presents a plan.</p>
+            <p>You decide to row over for a closer look. There cannot really be a spirit standing there!</p>
+            <p>As you begin to approach she lifts her hands to the back of her neck and unclasps a necklace. It is worthy of a princess’s treasure, alternating pearls and small pieces of blue-tinted shell. She says, “You must wear this; you need it to save the children. You must wear it.” and tosses it into your boat. You watch it arc through the air and land among the cod in the bottom of your boat. When you look up again, to ask her to explain herself, she is gone.</p>
+            <p>You pick up the necklace; it is certainly real. But you are no fool, you will not be tricked by some unnatural sea witch. Such necklaces are probably exactly how they get power over you. You throw the necklace over the side.</p>
             <ul>
-                <li><a href="#11">Next</a>.</li>
+                <li>
+                    <a href="#8">Next</a>
+                    .
+                </li>
             </ul>
         </div>
         <div id="10">
             <p>You free the pirate from his curse.</p>
             <ul>
-                <li><a href="#13">Next</a>.</li>
+                <li>
+                    <a href="#13">Next</a>
+                    .
+                </li>
             </ul>
         </div>
         <div id="11">
             <p>The sea witch tempts you away.</p>
             <ul>
-                <li><a href="#25">Succumb</a>.</li>
-                <li><a href="#2">Resist</a>.</li>
+                <li>
+                    <a href="#25">Succumb</a>
+                    .
+                </li>
+                <li>
+                    <a href="#2">Resist</a>
+                    .
+                </li>
             </ul>
         </div>
         <div id="12">
             <p>Fight a thrall and get captured.</p>
             <ul>
-                <li><a href="#3">Next</a>.</li>
+                <li>
+                    <a href="#3">Next</a>
+                    .
+                </li>
             </ul>
         </div>
         <div id="13">
             <p>Outsmart the sea witch.</p>
             <ul>
-                <li><a href="#14">Next</a>.</li>
+                <li>
+                    <a href="#14">Next</a>
+                    .
+                </li>
             </ul>
         </div>
         <div id="14">
             <img src="sr-30.jpg"></img>
             <p>Take the dinghy.</p>
             <ul>
-                <li><a href="#15">Next</a>.</li>
+                <li>
+                    <a href="#15">Next</a>
+                    .
+                </li>
             </ul>
         </div>
         <div id="15">
@@ -182,3 +254,4 @@
         </script>
     </body>
 </html>
+
