--- a/skull-rock.html
+++ b/skull-rock.html
@@ -13,6 +13,9 @@
             li {
                 line-height: 2;
             }
+            h1 {
+                text-align: center;
+            }
 
             p.theend {
                 text-align: center;
