--- a/skull-rock.html
+++ b/skull-rock.html
@@ -28,8 +28,13 @@
         </style>
     </head>
     <body>
-        <div id="-1">
+        <div id="-2">
 		<h1>Skull Rock</h1>
+            <img src="sr-00.jpg"></img>
+            <ul> <li> <a href="#-1">Next</a>.  </li> </ul>
+	</div>
+        <div id="-1">
+		<h1>Act I: Introduction</h1>
             <ul> <li> <a href="#0">Next</a>.  </li> </ul>
 	</div>
         <div id="0">
