--- a/skull-rock.html
+++ b/skull-rock.html
@@ -79,12 +79,10 @@
             <p>Your boat is full. You haul anchor and set to rowing back to the harbour, there are still many hours of work yet. As you approach the mouth of The Narrows, the fog gets thicker, until you can longer see land. No bother, you’ll row through it. Sure enough, a few moments later you row through and you can see land again. But there is something else! Standing on a rock, perhaps some 50 meters away, the glowing apparition of a beautiful curly red haired pale skinned woman dressed in green and white gossamer. You look around, surely someone else sees her too, but there is no one. Motionless, she watches you intently.</p>
             <ul>
                 <li>
-                    <a href="#8">Ignore her</a>
-                    .
+                    <a href="#8">Ignore her</a>.
                 </li>
                 <li>
-                    <a href="#9">Row over</a>
-                    .
+                    <a href="#9">Row over</a>.
                 </li>
             </ul>
         </div>
@@ -92,12 +90,10 @@
             <p>You encounter the pirate.</p>
             <ul>
                 <li>
-                    <a href="#12">Fight</a>
-                    .
+                    <a href="#12">Fight</a>.
                 </li>
                 <li>
-                    <a href="#3">Lay low</a>
-                    .
+                    <a href="#3">Lay low</a>.
                 </li>
             </ul>
         </div>
@@ -106,12 +102,10 @@
             <p>You are rescued by Alice and Isaac.</p>
             <ul>
                 <li>
-                    <a href="#28">Steal the diamond tooth</a>
-                    .
+                    <a href="#28">Steal the diamond tooth</a>.
                 </li>
                 <li>
-                    <a href="#4">Hide and observe</a>
-                    .
+                    <a href="#4">Hide and observe</a>.
                 </li>
             </ul>
         </div>
@@ -202,8 +196,16 @@
 
 	    <p>You are awoken by the sound of men shouting. When you open your eyes you are surprised to see a sailing ship bearing down on you.</p>
 
-            <ul> <li> <a href="#11">Next</a>.  </li> </ul>
+            <ul> <li> <a href="#8.5">Next</a>.  </li> </ul>
         </div>
+        <div id="8.5">
+		<p class="title">On Board the Whiskey Jack</p>
+            <ul> <li> <a href="#8.6">Next</a>.  </li> </ul>
+	</div>
+        <div id="8.6">
+		<h1>Act II: Development</h1>
+            <ul> <li> <a href="#11">Next</a>.  </li> </ul>
+	</div>
         <div id="9">
 		<p class="title">Sheila NaGeira's Necklace</p>
             <p>You decide to row over for a closer look. There cannot really be a spirit standing there!</p>
