--- a/skull-rock.html
+++ b/skull-rock.html
@@ -180,6 +180,10 @@
 		<p class="title">Nightmares</p>
             <p>You put the beautiful, but frightening, apparition out of your mind, and pumping your oars all the harder you hasten back to your stage. You spend the next several hours unloading, splitting, and salting your fish.</p>
             <p>That night you do not sleep well. You have many nightmares about a monstrous pirate. Not simply a mean pirate, but some sort of literal monster pirate captain seemingly from Hell. He seemed to be recruiting crew, corrupting them with enticements to commit unspeakable deadly sins, and rejoicing in their eventual deaths. His head was that of a bleached skull with perpetual flames burning in his eye sockets. You also dream of young Alice and Isaac. You see them cowering in a cold damp dark place. Through it all, you hear a woman pleading, “Help them.”</p>
+            <ul> <li> <a href="#8.4">Next</a>.  </li> </ul>
+	</div>
+	<div id="8.4">
+		<p class="title">Sheila NaGeira Accepted</p>
             <p>In the morning, by the time you trudge down to your boat, the sun is already up although the weather is the same as yesterday so it is hard to tell, and all the fishermen are already out through The Narrows.</p>
 
 	    <p>You untie the painter line and turn to sit down and begin your commute. Sitting in the back of the boat is the woman from yesterday. She motions for you to sit and begin rowing, which you do. She sits silently as you row out the harbour. You are equally quiet, and as you row, despite your trepidation, you regard her carefully. As you row she is visited by a regular stream of gulls, swallows, and robins who land on the gunnel and accept her touch.</p>
@@ -204,10 +208,10 @@
 	</div>
         <div id="8.6">
 		<h1>Act II: Development</h1>
-            <ul> <li> <a href="#11">Next</a>.  </li> </ul>
+            <ul> <li> <a href="#10.5">Next</a>.  </li> </ul>
 	</div>
         <div id="9">
-		<p class="title">Sheila NaGeira's Necklace</p>
+		<p class="title">Sheila NaGeira Scorned</p>
             <p>You decide to row over for a closer look. There cannot really be a spirit standing there!</p>
             <p>As you begin to approach she lifts her hands to the back of her neck and unclasps a necklace. It is worthy of a princess’s treasure, alternating pearls and small pieces of blue-tinted shell. She says, “You must wear this; you need it to save the children. You must wear it.” and tosses it into your boat. You watch it arc through the air and land among the cod in the bottom of your boat. When you look up again, to ask her to explain herself, she is gone.</p>
             <p>You pick up the necklace; it is certainly real. But you are no fool, you will not be tricked by some unnatural sea witch. Such necklaces are probably exactly how they get power over you. You throw the necklace over the side.</p>
@@ -220,13 +224,12 @@
         </div>
         <div id="10">
             <p>You free the pirate from his curse.</p>
-            <ul>
-                <li>
-                    <a href="#13">Next</a>
-                    .
-                </li>
-            </ul>
+            <ul> <li> <a href="#13">Next</a>.  </li> </ul>
         </div>
+	<div id="10.5">
+		<p class="title">The Evil Captain</p>
+            <ul> <li> <a href="#11">Next</a>.  </li> </ul>
+	</div>
         <div id="11">
             <p>The sea witch tempts you away.</p>
             <ul>
