--- a/skull-rock.html
+++ b/skull-rock.html
@@ -78,54 +78,45 @@
             <p>The gloom of the fog is an extra burden today too. Yesterday, at church, there was a heartbreaking burial for two young stowaways. Twins, Alice and Isaac, just 6-years-old. They came across in February on the same ship you did. How they stayed hidden and fed on such a small ship boggles the mind, but they were not discovered until 2 weeks in. By that time the captain was not willing to turn back because delay would have meant added expense, and a late arrival which would have meant not getting the best landing spots. In spite of their young age they were thriving and even helping until 3 weeks ago when they went missing. Finally, you were forced to conclude that they met some ill fate and were declared dead, and a memorial was held, yesterday.</p>
             <p>Your boat is full. You haul anchor and set to rowing back to the harbour, there are still many hours of work yet. As you approach the mouth of The Narrows, the fog gets thicker, until you can longer see land. No bother, you’ll row through it. Sure enough, a few moments later you row through and you can see land again. But there is something else! Standing on a rock, perhaps some 50 meters away, the glowing apparition of a beautiful curly red haired pale skinned woman dressed in green and white gossamer. You look around, surely someone else sees her too, but there is no one. Motionless, she watches you intently.</p>
             <ul>
-                <li>
-                    <a href="#8">Ignore her</a>.
-                </li>
-                <li>
-                    <a href="#9">Row over</a>.
-                </li>
+                <li> <a href="#8">Ignore her</a>.  </li>
+                <li> <a href="#9">Row over</a>.  </li>
             </ul>
         </div>
         <div id="2">
-            <p>You encounter the pirate.</p>
+		<p class="title">Sword Fight</p>
+            <p>Fight the pirates.</p>
             <ul>
-                <li>
-                    <a href="#12">Fight</a>.
-                </li>
-                <li>
-                    <a href="#3">Lay low</a>.
-                </li>
+                <li> <a href="#12">Fight</a>.  </li>
+                <li> <a href="#3">Lay low</a>.  </li>
             </ul>
         </div>
         <div id="3">
+		<p class="title">Rescue</p>
             <img src="sr-03.jpg"></img>
             <p>You are rescued by Alice and Isaac.</p>
             <ul>
-                <li>
-                    <a href="#28">Steal the diamond tooth</a>.
-                </li>
-                <li>
-                    <a href="#4">Hide and observe</a>.
-                </li>
+                <li> <a href="#28">Steal the diamond tooth</a>.  </li>
+                <li> <a href="#4">Hide and observe</a>.  </li>
             </ul>
         </div>
         <div id="4">
+		<p class="title">Achors Away</p>
             <img src="sr-04.jpg"></img>
             <p>Kill the demon octopus with a giant anchor.</p>
             <ul>
-                <li>
-                    <a href="#5">Steal the diamond tooth</a>
-                    .
-                </li>
-                <li>
-                    <a href="#26">Find the pirate</a>
-                    .
-                </li>
+                <li> <a href="#5">Steal the diamond tooth</a>.  </li>
+                <li> <a href="#26">Find the pirate</a>.  </li>
             </ul>
         </div>
         <div id="5">
-            <img src="sr-05.jpg"></img>
+		<h1>Act III: Twist</h1>
+            <ul>
+                <li> <a href="#5.5">Next</a>.  </li>
+            </ul>
+        </div>
+        <div id="5.5">
 	    <p class="title">The Captain's Past</p>
+            <img src="sr-05.jpg"></img>
 
 	    <p>You touch the phylactery and experience something like a dream.</p>
 
@@ -216,10 +207,7 @@
             <p>As you begin to approach she lifts her hands to the back of her neck and unclasps a necklace. It is worthy of a princess’s treasure, alternating pearls and small pieces of blue-tinted shell. She says, “You must wear this; you need it to save the children. You must wear it.” and tosses it into your boat. You watch it arc through the air and land among the cod in the bottom of your boat. When you look up again, to ask her to explain herself, she is gone.</p>
             <p>You pick up the necklace; it is certainly real. But you are no fool, you will not be tricked by some unnatural sea witch. Such necklaces are probably exactly how they get power over you. You throw the necklace over the side.</p>
             <ul>
-                <li>
-                    <a href="#8">Next</a>
-                    .
-                </li>
+                <li> <a href="#8">Next</a>.  </li>
             </ul>
         </div>
         <div id="10">
@@ -231,16 +219,11 @@
             <ul> <li> <a href="#11">Next</a>.  </li> </ul>
 	</div>
         <div id="11">
+		<p class="title">The Sea Witch's Offer</p>
             <p>The sea witch tempts you away.</p>
             <ul>
-                <li>
-                    <a href="#25">Succumb</a>
-                    .
-                </li>
-                <li>
-                    <a href="#2">Resist</a>
-                    .
-                </li>
+                <li> <a href="#25">Succumb</a>.  </li>
+                <li> <a href="#2">Resist</a>.  </li>
             </ul>
         </div>
         <div id="12">
