--- a/skull-rock.html
+++ b/skull-rock.html
@@ -100,7 +100,7 @@
             </ul>
         </div>
         <div id="4">
-		<p class="title">Achors Away</p>
+		<p class="title">Anchors Away</p>
             <img src="sr-04.jpg"></img>
             <p>Kill the demon octopus with a giant anchor.</p>
             <ul>
@@ -110,9 +110,7 @@
         </div>
         <div id="5">
 		<h1>Act III: Twist</h1>
-            <ul>
-                <li> <a href="#5.5">Next</a>.  </li>
-            </ul>
+            <ul> <li> <a href="#5.5">Next</a>.  </li> </ul>
         </div>
         <div id="5.5">
 	    <p class="title">The Captain's Past</p>
@@ -126,19 +124,17 @@
 
 	    <p>You have been overseeing the offloading of the cargo and making preparations for your next load. You are looking forward to some rest in your bunk. You open your cabin door to find a stranger seated at your desk. He invites you in, to your own room, on your own ship! He motions for you to sit on your bunk and hands you a letter. It is a lettre de marque from the Queen. Except, not quite, it asks you to serve as an undercover privateer. The Queen cannot offer you the normal protection of a privateer, you must behave as though a pirate. The mysterious guest takes back the letter, salutes you, bows, and leaves. You breath deep, how do you start? It will have to wait until after your nap. You lie down and eventually slip unconscious.</p>
 
+            <ul> <li> <a href="#5.6">Next</a>.  </li> </ul>
+	</div>
+        <div id="5.6">
+		<h1>Act IV: Conclusion</h1>
+            <ul> <li> <a href="#5.7">Next</a>.  </li> </ul>
+	</div>
+	<div id="5.7">
             <ul>
-                <li>
-                    <a href="#6">Summon the sea witch</a>
-                    .
-                </li>
-                <li>
-                    <a href="#26">Find the pirate</a>
-                    .
-                </li>
-                <li>
-                    <a href="#29">Destroy the tooth</a>
-                    .
-                </li>
+                <li> <a href="#6">Summon the sea witch</a>.  </li>
+                <li> <a href="#26">Find the pirate</a>.  </li>
+                <li> <a href="#29">Destroy the tooth</a>.  </li>
             </ul>
         </div>
         <div id="6">
