--- a/skull-rock.html
+++ b/skull-rock.html
@@ -131,6 +131,8 @@
             <ul> <li> <a href="#5.7">Next</a>.  </li> </ul>
 	</div>
 	<div id="5.7">
+	    <p class="title">The Crux</p>
+	    <p>What should you do next?</p>
             <ul>
                 <li> <a href="#6">Summon the sea witch</a>.  </li>
                 <li> <a href="#26">Find the pirate</a>.  </li>
@@ -138,29 +140,19 @@
             </ul>
         </div>
         <div id="6">
+	    <p class="title">Deal with the Devil</p>
             <p>Encounter the sea witch.</p>
             <ul>
-                <li>
-                    <a href="#27">Sacrifice yourself</a>
-                    .
-                </li>
-                <li>
-                    <a href="#7">Negotiate with the sea witch</a>
-                    .
-                </li>
+                <li> <a href="#27">Sacrifice yourself</a>.  </li>
+                <li> <a href="#7">Negotiate with the sea witch</a>.  </li>
             </ul>
         </div>
         <div id="7">
+	    <p class="title">Achilles' Heel</p>
             <p>Sheila Nageira returns.</p>
             <ul>
-                <li>
-                    <a href="#10">Sacrifice yourself</a>
-                    .
-                </li>
-                <li>
-                    <a href="#29">Destroy the tooth</a>
-                    .
-                </li>
+                <li> <a href="#10">Sacrifice yourself</a>.  </li>
+                <li> <a href="#29">Destroy the tooth</a>.  </li>
             </ul>
         </div>
         <div id="8">
@@ -207,6 +199,7 @@
             </ul>
         </div>
         <div id="10">
+		<p class="title">Redemption</p>
             <p>You free the pirate from his curse.</p>
             <ul> <li> <a href="#13">Next</a>.  </li> </ul>
         </div>
@@ -231,23 +224,19 @@
                 </li>
             </ul>
         </div>
-        <div id="13">
+        <div id="13"> 
+		<p class="title">Seeing Through the Fog</p>
             <p>Outsmart the sea witch.</p>
             <ul>
-                <li>
-                    <a href="#14">Next</a>
-                    .
-                </li>
+                <li> <a href="#14">Next</a>.  </li>
             </ul>
         </div>
         <div id="14">
+		<p class="title">Nearly There</p>
             <img src="sr-30.jpg"></img>
             <p>Take the dinghy.</p>
             <ul>
-                <li>
-                    <a href="#15">Next</a>
-                    .
-                </li>
+                <li> <a href="#15">Next</a>.  </li>
             </ul>
         </div>
         <div id="15">
